# Wallpaper-Calendar

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  SETUP.SH  configure.ac
po/: POTFILES.in  pl.po
src/: CalendarV.cpp  CalendarV.h  Controler.cpp  Controler.h  DB.cpp  DB.h  Date.cpp  Date.h  Event.cpp  Event.h  Makefile.am  Parser.cpp  Parser.h  main.cpp
src/ui/: Add_event.cpp  Add_event.h  Calendar.cpp  Calendar.h  Color.h  Color_label.cpp  Color_label.h  Day.cpp  Day.h  Day_view.cpp  Day_view.h  Image.cpp  Image.h  Rect.cpp  Rect.h  Settings.cpp  Settings.h
