AC_INIT(src/main.cpp)

PACKAGE=wallpaper-calendar
VERSION=0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

#Translation
IT_PROG_INTLTOOL([0.35.0])

GETTEXT_PACKAGE=wallpaper-calendar
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"],
                   [The domain to use with gettext])
AM_GLIB_GNU_GETTEXT

PROGRAMNAME_LOCALEDIR=[$(datadir)/locale]
AC_SUBST(PROGRAMNAME_LOCALEDIR)

#Libraries
GTKMM_REQUIRED_VERSION=3.4.2
SQLITE_REQUIRED_VERSION=3.7.13
ICAL_REQUIRED_VERSION=0.48
PKG_CHECK_MODULES(GTKMM, [gtkmm-3.0 >= $GTKMM_REQUIRED_VERSION])
PKG_CHECK_MODULES(SQLITE, [sqlite3 >= $SQLITE_REQUIRED_VERSION])
PKG_CHECK_MODULES(ICAL, [libical >= $ICAL_REQUIRED_VERSION])

AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)
AC_SUBST([SQLITE_CFLAGS])
AC_SUBST([SQLITE_LIBS])
AC_SUBST([ICAL_CFLAGS])
AC_SUBST([ICAL_LIBS])

AC_SUBST(INTI_CFLAGS)
AC_SUBST(INTI_LIBS)

AC_LANG([C++])
AC_PROG_CXX([g++])

AC_OUTPUT(Makefile src/Makefile po/Makefile.in)
